<package format="2">
  <name>view</name>
  <version>1.0.0</version>
  <description>
    <p>view</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
    <architecture_independent />
  </export>
</package>